abgabemonzwolff/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: "idi2019.azurecr.io/pmo5502-aufgabea"
        #args: [ConnectionStrings:BackendService=http://backendservice:8080]
        name: frontend
        ports:
        - containerPort: 80
          name: frontend
