abgabemonzwolff/templates/backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendservice
spec:
  ports:
  - port: 8080
  selector:
    app: backend
  clusterIP: None
