abgabemonzwolff/templates/frontendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
spec:
  selector:
    app: frontend
  ports:
    - port: 80
  type: LoadBalancer
